--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.15.1
   cloud_firestore: ^4.8.5
   firebase_auth: ^4.8.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
